src/templates/index-page.scss
@import "../styles/global";
@import "../styles/mixins";
@import "../styles/media-queries";

.IndexPage {
  position: relative;
  width: 100vw;
  height: 100vh;
  overflow: hidden;

  &__intro {
    z-index: 3;
    cursor: pointer;
    -webkit-transition: opacity 5s;
    -moz-transition: opacity 5s;
    -ms-transition: opacity 5s;
    -o-transition: opacity 5s;
    transition: opacity 5s;

    position: relative;
    overflow: hidden;
    pointer-events: none;

    img,
    .IndexPage__image {
      height: 100vh;
      width: auto;
      margin-left: -33rem;
      object-fit: cover;
    }

    @include respond-to(m) {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;

      img,
      .IndexPage__image {
        height: 100%;
        width: 100%;
        margin: 0;
      }
    }
  }

  &__bg-image {
    background: $hp-blue;
    background: -webkit-linear-gradient(
      rgba($hp-blue, 0.8),
      rgba($hp-blue, 0.5)
    );
    background: linear-gradient(rgba($hp-blue, 1), rgba($hp-blue, 0.8));
    width: auto;
    height: 100%;
    position: absolute;

    img,
    .IndexPage__image {
      opacity: 0.5;
      width: 100vw;
      height: 100vh;
    }
  }
  &__content {
    z-index: 0;
    height: auto;
    min-height: 100vh;
    position: absolute;

    top: 0;
    right: 0;
    left: 0;
    bottom: 0;

    & a {
      font-size: $fs-h2-mobile;
      @include respond-to(xl) {
        font-size: $fs-h2;
      }
    }
  }
  &__wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 100%;
  }
  &__menu-right,
  &__menu-left {
    flex: 1 0 30%;
    height: 70%;

    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;

    z-index: 2;

    @include respond-to(xl) {
      height: 80%;
    }
  }
  &__menu-left {
    // align-items: flex-end;

    & .IndexPage__link:nth-child(even) {
      margin-right: 25rem;
    }
  }
  &__menu-right {
    & .IndexPage__link:nth-child(even) {
      margin-left: 25rem;
    }
  }
  &__link {
    text-decoration: none;
    text-transform: uppercase;
    font-weight: $fw-bold;

    color: $hp-white;
  }

  &__logo-box,
  &__hexa-box {
    position: absolute;
    top: 0;
    left: 0;

    height: 100%;
    width: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
  }

  &__hexa-box {
    & img {
      display: none;

      @include respond-to(m) {
        display: block;
        width: 52vw;
      }
      @include respond-to(xl) {
        width: 45vw;
      }
    }
  }
  &__logo-box {
    & img {
      margin-top: -$margin-s;
      width: 80vw;
      max-width: 40rem;
      @include respond-to(m) {
        margin-top: -5rem;
        width: 38vw;
        max-width: 60rem;
      }
      @include respond-to(xl) {
        width: 30vw;
        max-width: 80rem;
      }
    }
  }

  &__logo {
    z-index: 3;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    background: $hp-blue;
    background: -webkit-linear-gradient(
      rgba($hp-blue, 0.6),
      rgba($hp-blue, 0.5)
    );
    opacity: 1;
    -webkit-transition: all 5s;
    -moz-transition: all 5s;
    -ms-transition: all 5s;
    -o-transition: all 5s;
    transition: all 5s;

    > div {
      margin: 0 auto;
      display: block;
      margin-top: 10rem;
      max-width: 25rem;
    }
    @include respond-to(m) {
      background: transparent;
      position: absolute;
      top: -3%;
      left: 10%;
      height: 30rem;
      width: 40rem;
    }
    @include respond-to(xxl) {
      top: 10%;
      left: 10%;
      height: 40rem;
      width: 40rem;

      > img {
        width: 100%;
        height: auto;
        padding: 0;
        object-fit: contain;
      }
    }
  }
  &__mobile {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    margin: 0 auto;

    & .IndexPage__box {
      position: relative;
      height: 30rem;
    }

    > a {
      font-size: $fs-h3;
      text-align: center;
      margin-bottom: $margin-s;
    }
  }
  &__dropLayer {
    z-index: 1;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: $hp-blue;

    display: flex;
    justify-content: center;
    align-items: center;
  }
  &__drop {
    position: absolute;
    margin: auto;
    height: 20rem;
    width: 20rem;
  }
}
.Layout__footer > a {
  color: $hp-white;
}

